--- a/1-node-farm/starter/.prettierrc
+++ b/1-node-farm/starter/.prettierrc
@@ -1,4 +1,4 @@
 {
-                                                                                "singleQuote": true,
-                                                                                "tabWidth": 80
+  "singleQuote": true,
+  "printWidth": 120
 }
