--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=sinan
-PASSWORD=123456
+DATABASE=mongodb+srv://sinankaratas:<PASSWORD>@cloud-learning.9hub7mi.mongodb.net/natours?retryWrites=true&w=majority&appName=Cloud-Learning
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABAS_PASSWORD=944ft7MPZB5kfK6x
