--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -5,16 +5,20 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Sinan Karatas",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "global": "^4.4.0",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "ndb": "^1.1.5",
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
